--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/psd401/mitel-syslog",
   "dependencies": {
+    "moment": "^2.8.4",
     "winston": "^0.8.3",
     "winston-syslog": "^0.2.5"
   }
